[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'pyenv-inspect'
description = 'An auxiliary library for the virtualenv-pyenv and tox-pyenv-redux plugins'
readme = 'README.md'
license = 'MIT'
license-files = ['LICENSE']
authors = [
    {name = 'Dmitry Meyer', email = 'me@undef.im'},
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries',
    'Topic :: Utilities',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]
keywords = ['pyenv']
requires-python = '>= 3.9'
dynamic = ['version']

[project.urls]
Homepage = 'https://github.com/un-def/pyenv-inspect'
Repository = 'https://github.com/un-def/pyenv-inspect.git'
Changelog = 'https://github.com/un-def/pyenv-inspect/releases'
Issues = 'https://github.com/un-def/pyenv-inspect/issues'

[dependency-groups]
lint = [
    'isort',
]
test = [
    'pytest',
    'tox',
]
dev = [
    {include-group = 'lint'},
    {include-group = 'test'},
]

[tool.setuptools.dynamic]
version = {attr = 'pyenv_inspect.__version__'}

[tool.setuptools]
zip-safe = true
include-package-data = false

[tool.isort]
lines_after_imports = 2
multi_line_output = 5
include_trailing_comma = true
use_parentheses = true
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'TESTS', 'LOCALFOLDER']
known_first_party = ['pyenv_inspect']
known_tests = ['tests']

[tool.pytest.ini_options]
minversion = '7.0'
testpaths = ['tests']

[tool.tox]
legacy_tox_ini = '''
[tox]
envlist =
    py39
    py310
    py311
    py312
    py313
    py314
    flake8
    isort
isolated_build = true

[testenv]
deps =
    pytest >= 7.0
commands = pytest {posargs}

[testenv:flake8]
skip_install = true
deps = flake8
commands = flake8 {posargs}

[testenv:isort]
skip_install = true
deps = isort
commands = isort {posargs:. -c}
'''
